--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "semi": "off",
     "arrow-parens": "off",
     "comma-dangle": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
   },
   "extends": ["eslint:recommended", "google"]
 }
